[package]
name = "internet-radio"
version = "0.6.0"
authors = ["Samuel Hicks <SamMHicks@hotmail.co.uk>"]
edition = "2018"
homepage = "https://github.com/sammhicks/internet-radio-rs"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
anyhow = "1.0"
crossterm =  { version = "0.16", features = ["event-stream"] }
futures = "0.3"
glib = "0.9"
gstreamer = "0.15"
gstreamer-sys = "0.8"
log = { version = "0.4", features = ["std"] }
m3u = "1.0"
pls = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = [ "signal" ] }
toml = "0.5"
