[package]
name = "rradio"
version = "0.9.0"
authors = ["Samuel Hicks <SamMHicks@hotmail.co.uk>"]
edition = "2018"
description = "An internet radio with configurable two digit entry of stations"
readme = "README.md"
homepage = "https://github.com/sammhicks/internet-radio-rs"
repository = "https://github.com/sammhicks/internet-radio-rs"
license = "MIT"
keywords = ["radio"]
categories = ["audio", "internet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
web_interface = [ "bytes", "warp"]
embed_static_web_content = []
production_web_server = []

[dependencies]
anyhow = "1.0"
base64 = "0.12"
bytes = { version = "0.5", optional = true }
crossterm =  { version = "0.17", features = ["event-stream"] }
flexi_logger = { version = "0.15", default_features = false, features = ["textfilter"] }
futures = "0.3"
glib = "0.10"
gstreamer = "0.16"
gstreamer-sys = "0.9"
log = { version = "0.4", features = ["std"] }
m3u = "1.0"
pls = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "stream", "sync", "time"] }
toml = "0.5"
warp = { version = "0.2", optional = true }
