[package]
name = "rradio-messages"
version = "0.35.0"
authors = ["Samuel Hicks <SamMHicks@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = [ "futures-util", "tokio" ]

[dependencies]
arcstr = { version = "1.1.5", default-features = false, features = [ "serde", "std" ] }
base64 = "0.21.0"
futures-util = { version = "0.3.28", features = [ "sink" ], optional = true }
postcard = { version = "1.0.4", default-features = false, features = [ "use-std" ] }
serde = { version = "1.0.160", features = ["derive", "rc"] }
tokio = { version = "1.27.0", features = [ "io-util" ], optional = true }
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.70"
tokio = { version = "1.27.0", features = [ "rt", "macros", "net", "sync", "signal" ] }
