[package]
name = "rradio-messages"
version = "0.35.0"
authors = ["Samuel Hicks <SamMHicks@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["dep:futures-util", "dep:tokio"]

[dependencies]
arcstr = { version = "1.1.5", default-features = false, features = ["serde", "std"] }
base64 = "0.21.5"
futures-util = { version = "0.3.29", features = ["sink"], optional = true }
postcard = { version = "1.0.8", default-features = false, features = ["use-std"] }
serde = { version = "1.0.192", features = ["derive", "rc"] }
tokio = { version = "1.34.0", features = ["io-util"], optional = true }
thiserror = "1.0.50"

[dev-dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["rt", "macros", "net", "sync", "signal"] }
