[package]
name = "rradio"
version = "0.52.2"
authors = ["Samuel Hicks <SamMHicks@hotmail.co.uk>"]
edition = "2018"
description = "An internet radio with configurable two digit entry of stations"
readme = "README.md"
homepage = "https://github.com/sammhicks/internet-radio-rs"
repository = "https://github.com/sammhicks/internet-radio-rs"
license = "MIT"
keywords = ["radio"]
categories = ["audio", "internet"]

default-run = "rradio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cd = ["dep:libc"]
mount = ["dep:sys-mount", "dep:tempfile"]
ping = ["dep:pnet", "dep:pnet_macros_support"]
production-server = []
usb = ["mount"]
web = ["dep:axum", "dep:tower", "dep:tower-http"]
default = ["web"]

[dependencies]
anyhow = "1.0.75"
askama = "0.12.1"
async-channel = "2.1.0"
axum = { version = "0.7.1", default-features = false, features = ["http1", "json", "ws"], optional = true }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
crossterm =  { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.29"
glib = "0.18.3"
gstreamer = "0.21.2"
gstreamer-audio = "0.21.2"
gstreamer-sys = "0.21.2"
humantime-serde = "1.1.1"
hyper = "1.0.1"
hyper-util = "0.1.1"
libc = { version = "0.2.150", optional = true }
pin-project = "1.1.3"
pls = "0.2.2"
pnet = { version = "0.34.0", features = ["std"], optional = true }
pnet_macros_support = { version = "0.34.0", optional = true }
quick-xml = { version = "0.31.0", features = ["serialize"] }
rand = "0.8.5"
reqwest = { version = "0.11.22", default-features = false }
rradio-messages = { path = "../messages", features = ["async"] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
sys-mount = { version = "2.1.0", optional = true }
tempfile = { version = "3.8.1", optional = true }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "io-util", "net", "time", "sync"] }
toml = "0.8.8"
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.0", features = ["fs"], optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.4.1", features = ["serde"] }
